test: jboss4 PermGen OOM